--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "license": "ISC",
     "dependencies": {
         "extend": "^3.0.2",
+        "flatpickr": "^4.6.2",
         "json-server": "^0.15.1",
         "mime": "^2.4.4",
+        "requirejs": "^2.3.6",
         "superagent": "^5.1.0"
     },
     "devDependencies": {
