--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "flatpickr": "^4.6.2",
         "json-server": "^0.15.1",
         "mime": "^2.4.4",
+        "rangeslider-pure": "^0.4.11",
         "requirejs": "^2.3.6",
         "superagent": "^5.1.0"
     },
